[package]
name = "mail-list-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio         = { version = "~1.14.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
mongodb       = { version = "~2.0.2", features = ["bson-chrono-0_4"] }
chrono        = { version = "~0.4.19", features = ["serde"] }
serde         = { version = "~1.0.130", features = ["derive"] }
log           = { version = "~0.4.14", features = ["std"] }
simple_logger = "~1.15.0"
crossfire     = "~0.1.7"
futures       = "~0.3.18"
anyhow        = "~1.0.51"
mailin        = "~0.5.0"
nanoid        = "~0.4.0"
axum          = "~0.3.4"
rss           = "~2.0.0"
mail-parser   = "~0.3.0"
