[package]
name = "mail-list-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
mailin            = { git = "https://github.com/George-Miao/mailin.git/", features = ["tokio_io"] }
tokio             = { version = "~1.14.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
mongodb           = { version = "~2.0.2", features = ["bson-chrono-0_4"] }
chrono            = { version = "~0.4.19", features = ["serde"] }
serde             = { version = "~1.0.130", features = ["derive"] }
log               = { version = "~0.4.14", features = ["std"] }
crossfire         = "~0.1.7"
futures           = "~0.3.18"
anyhow            = "~1.0.51"
nanoid            = "~0.4.0"
axum              = "~0.3.4"
rss               = "~2.0.0"
mail-parser       = "~0.3.0"
pretty_env_logger = "0.4.0"
