[package]
name = "mail-list-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
mailin             = { git = "https://github.com/George-Miao/mailin.git/", features = ["tokio_io"] }
tokio              = { version = "1.14.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
mongodb            = { version = "2.0.2", features = ["bson-chrono-0_4"] }
chrono             = { version = "0.4.19", features = ["serde"] }
serde              = { version = "1.0.130", features = ["derive"] }
tower-http         = { version = "0.2.0", features = ["trace", "set-header", "cors"] }
tracing-subscriber = { version = "0.3.5", features = ["fmt"] }
tracing            = "0.1.29"
crossfire          = "0.1.7"
futures            = "0.3.18"
anyhow             = "1.0.51"
nanoid             = "0.4.0"
axum               = "0.4.0"
rss                = "2.0.0"
mail-parser        = "0.3.0"
once_cell          = "1.9.0"

[profile.release]
codegen-units = 1
opt-level = 3
